--- a/portfolio/src/components/projects/employees/employees.module.css
+++ b/portfolio/src/components/projects/employees/employees.module.css
@@ -4,6 +4,7 @@
     text-align: left;
     background-color: rgb(65, 88, 139);
     font-size: x-large;
+    box-shadow: 0 16px 18px 0 rgba(0,0,0,0.24);
 
 
 }
@@ -12,8 +13,10 @@
     margin: 30px 0;
     padding: 30px 10px;
     background-color: rgb(65, 88, 139);
+    box-shadow: 0 16px 18px 0 rgba(0,0,0,0.24);
 }
 .filter input {
+    padding: 10px 10px;
 width: 90%;
     margin: 20px auto;
 }
@@ -42,7 +45,7 @@ width: 90%;
     color: aliceblue;
     text-align: center;
     font-size: xx-large;
-    padding-top: 40px;
+    padding: 40px 0;
 
 }
 .container {
@@ -60,7 +63,7 @@ width: 90%;
     background-color: #fff;
     color: black;
     display: flex;
-
+    box-shadow: 0 16px 18px 0 rgba(0,0,0,0.24);
     border-bottom: 1px solid
 }
 .hidden {
@@ -110,5 +113,46 @@ width: 90%;
 }
 .employees img:hover {
 
+    cursor: pointer;
+}
+
+.footer {
+    margin-top: 20px;
+    background-color: rgb(65, 88, 139);
+    padding: 30px 0;
+    text-align: left;
+    box-shadow: 0 16px 18px 0 rgba(0,0,0,0.24);
+}
+.footer .container {
+padding: 0 40px;
+}
+
+.form {
+    display: flex;
+    justify-content: flex-start;
+
+}
+
+.form input {
+padding: 10px 10px;
+margin-right: 20px;
+}
+
+.form button {
+    margin: 0 20px;
+    width: 150px;
+    font-size: smaller;
+    color: black;
+    background-color: #fff;
+    border-color: rgb(208, 208, 208);
+
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.form button:hover {
+    background-color: rgb(38, 62, 119); /* Green */
+    color: white;
+    box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24);
     cursor: pointer;
 }
