quiz and currency

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -74,6 +74,7 @@ margin-top: 20px;
 }
 
 .text button {
+    color: #05001a;
     padding: 10px 20px;
     margin: 20px 30%;
     background-color: rgb(234, 207, 4);
