--- a/src/components/projects/employees/employees.module.css
+++ b/src/components/projects/employees/employees.module.css
@@ -16,6 +16,7 @@
     box-shadow: 0 16px 18px 0 rgba(0,0,0,0.24);
 }
 .filter input {
+
     padding: 10px 10px;
 width: 90%;
     margin: 20px auto;
@@ -134,13 +135,17 @@ padding: 0 40px;
 }
 
 .form input {
-padding: 10px 10px;
+    width: 300px;
+padding: 30px 20px;
 margin-right: 20px;
+height: 40px;
 }
 
 .form button {
+    padding: 10px;
     margin: 0 20px;
-    width: 150px;
+    width: 200px;
+
     font-size: smaller;
     color: black;
     background-color: #fff;
