--- a/src/components/projects/main.module.css
+++ b/src/components/projects/main.module.css
@@ -1,4 +1,5 @@
 .title {
+    font-size: x-large;
     height: 40px;
     margin-left: 50px;
 }
@@ -50,9 +51,10 @@ top: 0;
 }
 
 .content h1 {
+    font-size: xx-large;
     position: absolute;
     z-index: 2;
-    top: 90px;
+    top: 110px;
     left: 0;
     right: 0;
     transition: 1s;
@@ -88,7 +90,7 @@ transition: 1s;
     left: 0;
     margin: 0 auto;
 z-index: 1;
-height: 460px;
+height: 0px;
 width: 400px;
 background: #000;
 opacity: 0;
